Add UI visited retailer

--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -303,6 +303,8 @@ LIST VIEW - TEXT
         width: 100%;
         border-bottom: 1px solid $border-line;
         cursor: pointer;
+        padding-top: 2vw;
+        padding-bottom: 2vw;
         
         .item-notification {   
             font-size: $filter-select;
@@ -312,6 +314,8 @@ LIST VIEW - TEXT
             color: $white;
             text-align: center;
             opacity: 0.6;
+            padding-top: 0vw;
+            padding-bottom: 0vw;
         }
 
         &.sub {
@@ -349,6 +353,19 @@ LIST VIEW - TEXT
                 width: 85%;
                 padding-left:0.6em;
             }
+
+            &.percent-100{
+                padding-left:0.6em;
+                width:100px;
+            }
+            &.percent-200{
+                width:200px; 
+            }
+            &.percent-300{
+                width:300px; 
+            }
+
+
             &.icon {
                 width: 15%;
             }
@@ -372,6 +389,9 @@ LIST VIEW - TEXT
             &.grey {
                 color: $grey;
             }
+            &.black {
+                color: $black;
+            }
             &.green {
                 color: $apple;
             }
@@ -383,8 +403,8 @@ LIST VIEW - TEXT
                 padding-left:2em;
             }
             &.title {
-                font-size: 1.2em;
-                height:2.5em;
+                font-size: 1.1em;
+                height:2em;
             }
             &.header {
                 width: 100%;
