--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -20,5 +20,6 @@
 @import "basic-call-procedure";
 @import "detail-retailer";
 @import "sales-order-payment";
+@import "visited-retailer";
 @import "splash";
 @import "left-menu";
