--- a/src/app/scss/_mpin.scss
+++ b/src/app/scss/_mpin.scss
@@ -61,7 +61,7 @@ $container-mpin-height: 100%;
 			color: #FFF;
 			font-size: 14px;
 			line-height: 40px;
-			text-align: left;
+			text-align: center;
 			//font-weight: lighter;
 		}
 
