+remittance page, +call preparation page, modify inventory page

--- a/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
@@ -10,7 +10,7 @@
                 <div class='cell icon'></div>
             </div>
         </div>
-    <div class="item-container" (click)="gotoDetailRetailer()">
+    <div class="item-container" (click)="gotoCallPreparation()">
         <div class="container">
             <div class='cell'>
                 <div class='container'><div class='cell left'>Rose Cell</div></div>
@@ -27,7 +27,7 @@
             <div class='cell icon arrow-right'></div>
         </div>
     </div>
-    <div class="item-container" (click)="gotoDetailRetailer()">
+    <div class="item-container" (click)="gotoCallPreparation()">
         <div class="container">
             <div class='cell'>
                 <div class='container'><div class='cell left'>Bird Cell</div></div>
@@ -44,7 +44,7 @@
             <div class='cell icon arrow-right'></div>
         </div>
     </div>
-    <div class="item-container" (click)="gotoDetailRetailer()">
+    <div class="item-container" (click)="gotoCallPreparation()">
         <div class="container">
             <div class='cell'>
                 <div class='container'><div class='cell left'>Gloria Cell</div></div>
