--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -92,7 +92,7 @@
             <div class='cell icon arrow-right'></div>
         </div>
         <div class="separator"></div>
-            <div class="container" (click)="goToTargetsActuals()">
+            <div class="container" (click)="goToTargets()">
                 <div class='cell icon target'></div>
                 <div class='cell'>
                     <div class='container'><div class='cell single'>Targets &amp; Actuals</div></div>
