--- a/src/app/app/basic-call-procedure/components/bcp-activity-step.html
+++ b/src/app/app/basic-call-procedure/components/bcp-activity-step.html
@@ -1,10 +1,11 @@
     <div class="container-body">
-        <div class="item-container">
+        <!-- <div class="item-container">
             <div class="container">
                 <div class='cell'>
                     <div class='container'><div class='cell single title bold'>Gloria Cell</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
-        </div>
+        </div> -->
+        BCP ACTIVITY STEP
     </div>
