--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -103,7 +103,7 @@ LIST VIEW - BUTTON
         width: 80%;
         padding-bottom: 15px;
         padding-top: 15px;
-        background-color: $dark-sea-green;
+        background-color: $apple;
         margin: 10%;
         border-radius: 5px;
         .button-identifier {
@@ -367,6 +367,7 @@ LIST VIEW - TEXT
                 width:30%;
             }
             &.content{
+                padding-left:0.6em;
                 width:70%
             }
 
