--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -81,7 +81,7 @@ LIST VIEW - BUTTON
     background-color: $white;
     width: 100%;
     height: 100%;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     overflow-x: hidden;
 
     &.menu {
@@ -95,6 +95,7 @@ LIST VIEW - BUTTON
         width: 50%;
         float:left;
     }
+
     .button {
         display: inline-block;
         width: 80%;
@@ -177,8 +178,6 @@ LIST VIEW - BUTTON
                 font-size: 5vw;
             }
         }
-
-        
     }
 
 
