--- a/src/app/scss/_login.scss
+++ b/src/app/scss/_login.scss
@@ -67,17 +67,17 @@ $container-login-height: 100%;
 			}
             .error-alert{
                 color:#FFF;
-                font-size:14px;
+                font-size:3vw;
             }
 			input {
 				width: 100%;
-				margin: 2vw auto;
+				// margin: 2vw auto;
 				display: block;
 				height: 10vw;
 				border: none;
-				font-size: medium;
-				margin-top: 10px;
-				margin-bottom: 10px;
+				font-size: 4vw;
+				margin-top: 1.5vw;
+				margin-bottom: 1.5vw;
 				background-color: rgba(199, 195, 184, 0.5);
 				outline: 0;
 				color : #000;
@@ -94,12 +94,12 @@ $container-login-height: 100%;
 		}
 		.login-button
 		{
-			height: 35px;
+			height: 7vw;
 			background-color: $apple;
 			text-align: center;
 			vertical-align: center;
-			font-size: 13pt;
-    		padding-top: 7px;
+			font-size: 5vw;
+    		padding: 2vw;
     		color : #FFF;
 		}
 		.login-separator
@@ -123,7 +123,7 @@ $container-login-height: 100%;
         background-position-y: center;
         z-index: 90;
 		position: fixed;
-		padding-top: 90vw;
+		padding-top: 50vw;
 
 	}
 }
