--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -130,7 +130,7 @@
 		<div>
 			<div class="item-container" (click)="subPhysicalMenuShow(i)">
 				<div class="container">
-					<div class='cell icon inventory-load'></div>
+					<div class='cell icon inventory-physical'></div>
 					<div class='cell'>
 				        <div class='container'><div class='cell content bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">SKU1</div></div>
 				        <div class='container' *ngIf="!vSubPhysicalMenuShow[i]">
