added id for some html

--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -135,7 +135,7 @@
 
         <div class="container" (click)="goToLogout()">
             <div class='cell'>
-                <div class='container'><div class='cell single'>Logout</div></div>
+                <div class='container'><div id='logout-btn' class='cell single'>Logout</div></div>
             </div>
             <div class='cell icon arrow-right'></div>
         </div>
