skip sales order

--- a/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
+++ b/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
@@ -111,11 +111,11 @@
         </div>
     </div>
     <div class='double-divider'>
-        <div class='button'>
+        <div class='button' id='skip' (click)='skipSalesOrderModalComponent()'>
             <div class='button-identifier'>SKIP</div>
         </div>
     </div>
-    <div class='double-divider'>
+    <div class='double-divider' id='confirm'>
         <div class='button' (click)="goToSalesOrderPayment()">
             <div class='button-identifier'>CONFIRM</div>
         </div>
