add page bcp-collection

--- a/src/app/app/close-day/components/visited-retail.component.html
+++ b/src/app/app/close-day/components/visited-retail.component.html
@@ -104,7 +104,7 @@
             </div>
     </div>
 
-    <div class="item-container-sub-vistd" *ngIf="vDetailShow">
+    <div class="item-container-sub-full" *ngIf="vDetailShow">
 		
     	<div class="item-container">
 	    	<div class="container">
