--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -345,6 +345,7 @@ LIST VIEW - TEXT
                 width: 40%;
                 padding-left:0.6em;
             }
+            
             &.right {
                 width: 40%;
                 text-align: right;
@@ -426,6 +427,10 @@ LIST VIEW - TEXT
             }
             &.title2 {
                 font-size: 1.2em;
+            }
+            &.title3{
+                font-size:1.5em;
+                padding-left:0.4em;
             }
             &.header {
                 width: 100%;
