--- a/src/app/scss/_visited-retailer.scss
+++ b/src/app/scss/_visited-retailer.scss
@@ -1,4 +1,4 @@
- .item-container-sub-vistd {
+ .item-container-sub-full {
         width: 100%;
         cursor: pointer;
         background-color: $whisper;
