--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -21,6 +21,7 @@
 @import "modal-box";
 @import "basic-call-procedure";
 @import "detail-retailer";
+@import "bcp-collection";
 @import "sales-order-payment";
 @import "visited-retailer";
 @import "splash";
