--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -81,7 +81,23 @@
                 padding-left:0.6em;
             }
             &.icon {
-                width: 15%;
+                height: 15%;
+                position: center;
+                text-align: center;
+                background-color: #00FF00;
+
+                .src{
+                    width: 100%;
+                    position: center;
+                    transform: rotate(-90deg);
+                    text-align: center; 
+                    font-size: 12px;
+                    color: #006600;
+                    font-weight: bold;
+                }
+            }
+            &.ws{
+                width: 7%;
             }
 
             &.bold {
