--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -417,6 +417,9 @@ LIST VIEW - TEXT
             &.deep-cyan {
                 color: $deep-cyan;
             }
+            &.red {
+                color: $red;
+            }
 
             &.sub-cell {
                 padding-left:2em;
