Add goto function for Call Preparation to BCP steps

--- a/src/app/app/basic-call-procedure/components/bcp-activity-step.html
+++ b/src/app/app/basic-call-procedure/components/bcp-activity-step.html
@@ -50,7 +50,7 @@
 <div class="container-body">
     <div class="no-divider">
         <div class="button">
-            <a (click)="next($event)" id="next-link"><div class="button-identifier">Next</div></a>
+            <a (click)="gotoBCPCollection()" id="next-link"><div class="button-identifier">Next</div></a>
         </div>
     </div>
 </div>
