--- a/src/app/app/basic-call-procedure/components/bcp-collection.component.html
+++ b/src/app/app/basic-call-procedure/components/bcp-collection.component.html
@@ -178,12 +178,12 @@
         </div>
         <div class="container">
         	<div class="double-divider">
-        		<div class="button">
+        		<div class= "button" (click)="gotoBCPActivityStep()">
         			<div class="button-identifier" id="skip-collection">Skip</div>
         		</div>
         	</div>
         	<div class="double-divider">
-        		<div class="button">
+        		<div class= "button" (click)="gotoBCPActivityStep()">
         			<div class="button-identifier" id="next-collection">Next</div>
         		</div>
         	</div>
