unserved order UI

--- a/src/app/app/basic-call-procedure/components/unserved-order.component.html
+++ b/src/app/app/basic-call-procedure/components/unserved-order.component.html
@@ -1,12 +1,33 @@
 <div class="container-body">
     <div class="item-container">
-        <div class="container">
+        <div class='container'>
             <div class='cell'>
                 <div class='container'><div class='cell single title'>Rose Cell</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell left italic'>(99999900003)</div></div>
+                <div class='container'><div class='cell left title italic'>(99999900003)</div></div>
+            </div>  
+        </div>
+
+        <div class="container">
+            <div class='cell'>
+                <div class='container'><div class='cell left green'>Order No. 12345678</div></div>
+            </div>
+            <div class='cell'>
+                <div class='container'><div class='cell right'>04/21/2016</div></div>
+            </div>
+                <div class='cell icon'></div>
+        </div>
+
+        <div class="item-container">
+            <div class="container">
+                <div class='cell'>
+                    <div class='container'><div class='cell single title'>Rose Cell</div></div>
+                </div>
+                <div class='cell'>
+                    <div class='container'><div class='cell left italic'>(99999900003)</div></div>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</div>    
