fix tslint and css in account receivables

--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -81,13 +81,13 @@
                 padding-left:0.6em;
             }
             &.icon {
-                height: 15%;
+                height: 30px;
                 position: center;
                 text-align: center;
                 background-color: #00FF00;
 
                 .src{
-                    width: 100%;
+                    width: 30px;
                     position: center;
                     transform: rotate(-90deg);
                     text-align: center; 
