hide SYNC button

--- a/src/app/app/my-transaction/components/my-transaction.component.html
+++ b/src/app/app/my-transaction/components/my-transaction.component.html
@@ -82,7 +82,7 @@
             <div class="text">Threshold &amp; Alerts</div>
         </div>      
     </div>
-    <div class="double-divider">
+    <div class="double-divider" hidden>
         <div class= "square-button border-bottom border-left" >
             <div class="icon sync"></div>
             <div class="text">Sync</div>
