--- a/src/app/app/close-day/components/close-day.component.html
+++ b/src/app/app/close-day/components/close-day.component.html
@@ -28,7 +28,7 @@
             <div class="text">Collection &amp; Remittance</div>
         </div>      
     </div>
-    <div class="double-divider">
+    <div class="double-divider" hidden>
         <div class= "square-button border-bottom border-left">
             <div class="icon sync"></div>
             <div class="text">Sync</div>
