--- a/src/app/app/basic-call-procedure/components/bcp-activity-step.html
+++ b/src/app/app/basic-call-procedure/components/bcp-activity-step.html
@@ -16,7 +16,7 @@
     <div class="step-container">
         <div class="step">
             <div class="left">
-                <div class="circle">1</div>
+                <div class='circle' ng-class="{'circle-green': vCollectionFlag}">1</div>
                 <div class="line"></div>
             </div>
             <div class="right">
@@ -27,7 +27,7 @@
 
         <div class="step">
             <div class="left">
-                <div class="circle">2</div>
+                <div class='circle' ng-class="{'circle-green': vOffersFlag}">2</div>
                 <div class="line"></div>
             </div>
             <div class="right">
@@ -38,7 +38,7 @@
 
         <div class="step">
             <div class="left">
-                <div class="circle">3</div>
+                <div class='circle' ng-class="{'circle-green': vSalesFlag}">3</div>
             </div>
             <div class="right">
                 <div class="title">Sales Order</div>
