--- a/src/app/scss/_bcp-activity-step.scss
+++ b/src/app/scss/_bcp-activity-step.scss
@@ -8,7 +8,7 @@
     	padding-left: 30%;
 
 		.circle{
-			background: #A6A6A6;
+			background: $dark-grey;
 		    width: 32px;
 		    height: 32px;
 		    line-height: 32px;
@@ -16,6 +16,10 @@
 		    position: relative;
 		    color: white;
 		    text-align: center;
+
+		    &.circle-green{
+		    	background: $apple;
+		    }
 		}
 		.line{
 			position: relative;
