--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -335,6 +335,34 @@ LIST VIEW - TEXT
             font-size: $content-normal;
             height:1.6em;
             vertical-align:middle;
+            input {
+                background: $white;
+                height: 30px;
+                border: 1px solid $dark-grey;
+                width: 75%;
+                text-align: -webkit-right;
+                -webkit-appearance: none;
+                border-radius: 7px;
+                padding-left: 15px;
+                padding-right: 15px;
+                font-size: $filter-select;
+                font-weight:lighter;
+                appearance: none;
+                cursor: pointer;
+            }
+            textarea {
+                background: $white;
+                height: 50px;
+                border: 1px solid $dark-grey;
+                width: 80%;
+                -webkit-appearance: none;
+                border-radius: 7px;
+                padding-left: 15px;
+                font-size: $filter-select;
+                font-weight:lighter;
+                appearance: none;
+                cursor: pointer;
+            }
 
             &.left {
                 width: 45%;
@@ -415,6 +443,9 @@ LIST VIEW - TEXT
             }
             &.deep-cyan {
                 color: $deep-cyan;
+            }
+            &.red{
+                color: $red;
             }
 
             &.sub-cell {
