sample sms plugin and changed border left to border right

--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -190,8 +190,8 @@ LIST VIEW - BUTTON
         padding-bottom: 2vw;
         padding-top: 2vw;
 
-        &.border-left {
-            border-left: 1px solid $white-smoke;
+        &.border-right {
+            border-right: 1px solid $white-smoke;
         }
         &.border-bottom {
             border-bottom: 1px solid $white-smoke;
